--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "Project": {
+    "ConnectionString": "Server=HOME-PC; Database=StroyCompany; Persist Security Info=false; User ID='user1'; Password='sa'; Encrypt='false'; Trusted_Connection=false;",
+    "CompanyName": "Renovo",
+    "CompanyPhone": "+7 (928) 292-26-62",
+    "CompanyPhoneShort": "+79282922662 ",
+    "CompanyEmail": "vse.v.dom@inbox.ru"
+  }
+
+
 }
