--- a/appsettings.json
+++ b/appsettings.json
@@ -28,14 +28,19 @@
         "Name": "File",
         "Args": {
           "path": "Logs/log.txt",
-          "outputTemplate": "{Timestamp:G} {Message} {NewLine:1} {Exception:1}"
+          "outputTemplate": "{Timestamp:G} {Message} {NewLine:1} {Exception:1}",
+          "fileSizeLimitBytes": "5242880",
+          "buffered": "true"
+
         }
       },
       {
         "Name": "File",
         "Args": {
           "path": "Logs/structLog.json",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "fileSizeLimitBytes": "5242880",
+          "buffered": "true"
         }
       }
     ]
