--- a/VartanMVCv2.csproj
+++ b/VartanMVCv2.csproj
@@ -8,12 +8,18 @@
 
   <ItemGroup>
     <Content Remove="bundleconfig.json" />
+    <Content Remove="wwwroot\js\scripts.bundle.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\scripts.bundle.js" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Logs\" />
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\fonts\" />
+    <Folder Include="wwwroot\images\servicesImage\" />
     <Folder Include="wwwroot\js\pages\" />
     <Folder Include="wwwroot\sass\" />
     <Folder Include="wwwroot\lib\" />
@@ -21,6 +27,7 @@
 
   <ItemGroup>
     <None Include="bundleconfig.json" />
+    <None Include="wwwroot\js\scripts.bundle.js" />
   </ItemGroup>
 
   <ItemGroup>
