--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Project": {
-    "ConnectionString": "Server=HOME-PC; Database=StroyCompany; Persist Security Info=false; User ID='user1'; Password='sa'; Encrypt='false'; Trusted_Connection=false;",
+    "ConnectionString": "Server=WIN-NEHPR1JQN79; Database=StroyCompany; Persist Security Info=false; User ID='user1'; Password='sa'; Encrypt='false'; Trusted_Connection=false;",
     "CompanyName": "Renovo",
     "CompanyPhone": "+7 (928) 292-26-62",
     "CompanySecondPhone": "+7 (900) 000-00-00",
