поправил верстку, добавил блок о коммерции добавил документацию

--- a/VartanMVCv2.csproj
+++ b/VartanMVCv2.csproj
@@ -29,6 +29,7 @@
     <Folder Include="wwwroot\images\servicesImage\" />
     <Folder Include="wwwroot\sass\" />
     <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\doc\" />
   </ItemGroup>
 
   <ItemGroup>
