--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,9 @@ artifacts/
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
+# Игнорировать файл appsettings.json
+appsettings.json
+
 # StyleCop
 StyleCopReport.xml
 
