--- a/VartanMVCv2.csproj
+++ b/VartanMVCv2.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\fonts\**" />
     <Compile Remove="wwwroot\js\pages\**" />
+    <Content Remove="wwwroot\fonts\**" />
     <Content Remove="wwwroot\js\pages\**" />
+    <EmbeddedResource Remove="wwwroot\fonts\**" />
     <EmbeddedResource Remove="wwwroot\js\pages\**" />
+    <None Remove="wwwroot\fonts\**" />
     <None Remove="wwwroot\js\pages\**" />
   </ItemGroup>
 
@@ -25,7 +29,6 @@
   <ItemGroup>
     <Folder Include="Logs\" />
     <Folder Include="Migrations\" />
-    <Folder Include="wwwroot\fonts\" />
     <Folder Include="wwwroot\images\servicesImage\" />
     <Folder Include="wwwroot\sass\" />
     <Folder Include="wwwroot\lib\" />
