--- a/VartanMVCv2.csproj
+++ b/VartanMVCv2.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Folder Include="Logs\" />
     <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\images\projectPhotos\SharedPhoto\" />
     <Folder Include="wwwroot\images\servicesImage\" />
     <Folder Include="wwwroot\sass\" />
     <Folder Include="wwwroot\lib\" />
