--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -7,8 +7,8 @@
     "CompanyPhoneShort": "+79282922662",
     "CompanySecondPhoneShort": "+79000000000",
     "CompanyEmail": "etalon-pro@bk.ru",
-    "CompanyAddress": "Россия, Краснодарский край, г.Краснодар ул.Ленина 144",
-    "CompanyWorkTime": "c 8:00 - 19:00 без выходных",
+    "CompanyAddress": "пїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ, пїЅ.пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ.пїЅпїЅпїЅпїЅпїЅпїЅ 144",
+    "CompanyWorkTime": "c 8:00 - 19:00 пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ",
     "CompanyCooperationPhone": "+7(999) 999-99-99",
     "CompanyCooperationPhoneShort": "+79999999999"
   },
